# apple-health-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.ch  Dockerfile.uv  Makefile  README.md  ch.Dockerfile  docker-compose.yml  glama.json  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_requst_template.md
.github/workflows/: ci.yml  inspector.yml  tests.yml
.github/workflows/mcp-composite-action/: action.yml
app/: config.py  main.py
app/mcp/v1/: mcp.py
app/mcp/v1/tools/: ch_reader.py  duckdb_reader.py  es_reader.py  xml_reader.py
app/schemas/: error_codes.py  record.py
app/services/: ch.py  ch_client.py  duck.py  duckdb_client.py  es.py
app/services/health/: clickhouse.py  db_queries.py  direct_xml.py  duck_queries.py  duckdb_queries.py  elasticsearch.py  sql_helpers.py  xml.py
app/utils/: auth.py  config_utils.py  requests_extensions.py
applehealth.chdb/data/applehealth/: data
applehealth.chdb/metadata/: applehealth  applehealth.sql
applehealth.chdb/store/29f/29f45214-5a15-4e1a-b754-4ed13148928c/all_106_188_5/: checksums.txt  creationDate.cmrk2  device.cmrk2  endDate.cmrk2  numerical.cmrk2  primary.cidx  serialization.json  sourceName.cmrk2  sourceVersion.cmrk2  startDate.cmrk2  type.cmrk2  unit.cmrk2  value.cmrk2
applehealth.chdb/store/29f/29f45214-5a15-4e1a-b754-4ed13148928c/all_189_255_5/: checksums.txt  creationDate.cmrk2  device.cmrk2  endDate.cmrk2  numerical.cmrk2  primary.cidx  serialization.json  sourceName.cmrk2  sourceVersion.cmrk2  startDate.cmrk2  type.cmrk2  unit.cmrk2  value.cmrk2
applehealth.chdb/store/29f/29f45214-5a15-4e1a-b754-4ed13148928c/all_1_105_6/: checksums.txt  creationDate.cmrk2  device.cmrk2  endDate.cmrk2  numerical.cmrk2  primary.cidx  serialization.json  sourceName.cmrk2  sourceVersion.cmrk2  startDate.cmrk2  type.cmrk2  unit.cmrk2  value.cmrk2
applehealth.chdb/store/29f/29f45214-5a15-4e1a-b754-4ed13148928c/all_256_277_4/: checksums.txt  creationDate.cmrk2  device.cmrk2  endDate.cmrk2  numerical.cmrk2  primary.cidx  serialization.json  sourceName.cmrk2  sourceVersion.cmrk2  startDate.cmrk2  type.cmrk2  unit.cmrk2  value.cmrk2
applehealth.chdb/store/29f/29f45214-5a15-4e1a-b754-4ed13148928c/all_278_278_0/: checksums.txt  data.cmrk3  primary.cidx  (+1 more)
applehealth.chdb/store/f2f/f2f19e65-8b26-40da-be38-2f26f8b971ba/: data.sql
config/: .env.example  .env.test
docs/: about.md  configuration.md  demo.md  getting-started.md  mcp-tools.md  roadmap.md  tests.md
scripts/: clickhouse_importer.py  duckdb_importer.py  run_elasticsearch.sh  xml2es.py  xml_exporter.py
tests/: agent.py  duckdb.example  e2e_tests.py  fileserver.py  import_tests.py  mcp.json  mcptest.py  output.json  parquet.example  parquet_example  query_tests.py  tools_test.py
tests/opik/: tool_calls.py
(+9 files in other folders)
