[project]
name = "apple-health-mcp-server"
version = "0.1.0"
description = "MCP server for Apple Health data"
requires-python = ">=3.13"
dependencies = [
    "chdb>=3.5.0",
    "cryptography>=45",
    "elasticsearch>=9.0",
    "fastmcp>=2.10",
    "greenlet>=3.2",
    "httpx>=0.28",
    "pandas>=2.3.2",
    "passlib>=1.7",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "testcontainers>=4.10",
    "testcontainers-postgres>=0.0.1rc1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
lint = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = [
    "alembic/",
    "migrations/",
]

[project.scripts]
start = "start:main"
